Package_Tools/include-C/gnutls/inarbeit/fertig/gnutls.pp


  Pgnutls_x509_crt_t = ^Tgnutls_x509_crt_t;
  Tgnutls_x509_crt_t = Pgnutls_x509_crt_int;
  Pgnutls_x509_crq_int = ^Tgnutls_x509_crq_int;
  Tgnutls_x509_crq_int = record
      {undefined structure}
    end;


  Pgnutls_x509_crq_t = ^Tgnutls_x509_crq_t;
  Tgnutls_x509_crq_t = Pgnutls_x509_crq_int;
  Pgnutls_openpgp_keyring_int = ^Tgnutls_openpgp_keyring_int;
  Tgnutls_openpgp_keyring_int = record
      {undefined structure}
    end;


  Pgnutls_openpgp_keyring_t = ^Tgnutls_openpgp_keyring_t;
  Tgnutls_openpgp_keyring_t = Pgnutls_openpgp_keyring_int;
{ Credential structures - used in gnutls_credentials_set();  }
  Pgnutls_certificate_credentials_st = ^Tgnutls_certificate_credentials_st;
  Tgnutls_certificate_credentials_st = record
      {undefined structure}
    end;


  Pgnutls_certificate_credentials_t = ^Tgnutls_certificate_credentials_t;
  Tgnutls_certificate_credentials_t = Pgnutls_certificate_credentials_st;

  Pgnutls_certificate_server_credentials = ^Tgnutls_certificate_server_credentials;
  Tgnutls_certificate_server_credentials = Tgnutls_certificate_credentials_t;

  Pgnutls_certificate_client_credentials = ^Tgnutls_certificate_client_credentials;
  Tgnutls_certificate_client_credentials = Tgnutls_certificate_credentials_t;

  Pgnutls_anon_server_credentials_t = ^Tgnutls_anon_server_credentials_t;
  Tgnutls_anon_server_credentials_t = Pgnutls_anon_server_credentials_st;

  Pgnutls_anon_client_credentials_t = ^Tgnutls_anon_client_credentials_t;
  Tgnutls_anon_client_credentials_t = Pgnutls_anon_client_credentials_st;

procedure gnutls_anon_free_server_credentials(sc:Tgnutls_anon_server_credentials_t);cdecl;external;
function gnutls_anon_allocate_server_credentials(sc:Pgnutls_anon_server_credentials_t):longint;cdecl;external;
procedure gnutls_anon_set_server_dh_params(res:Tgnutls_anon_server_credentials_t; dh_params:Tgnutls_dh_params_t);cdecl;external;
function gnutls_anon_set_server_known_dh_params(res:Tgnutls_anon_server_credentials_t; sec_param:Tgnutls_sec_param_t):longint;cdecl;external;
procedure gnutls_anon_set_server_params_function(res:Tgnutls_anon_server_credentials_t; func:Pgnutls_params_function);cdecl;external;
procedure gnutls_anon_free_client_credentials(sc:Tgnutls_anon_client_credentials_t);cdecl;external;
function gnutls_anon_allocate_client_credentials(sc:Pgnutls_anon_client_credentials_t):longint;cdecl;external;
{ CERTFILE is an x509 certificate in PEM form.
 * KEYFILE is a pkcs-1 private key in PEM form (for RSA keys).
  }
procedure gnutls_certificate_free_credentials(sc:Tgnutls_certificate_credentials_t);cdecl;external;
function gnutls_certificate_allocate_credentials(res:Pgnutls_certificate_credentials_t):longint;cdecl;external;
function gnutls_certificate_get_issuer(sc:Tgnutls_certificate_credentials_t; cert:Tgnutls_x509_crt_t; issuer:Pgnutls_x509_crt_t; flags:dword):longint;cdecl;external;
function gnutls_certificate_get_crt_raw(sc:Tgnutls_certificate_credentials_t; idx1:dword; idx2:dword; cert:Pgnutls_datum_t):longint;cdecl;external;
procedure gnutls_certificate_free_keys(sc:Tgnutls_certificate_credentials_t);cdecl;external;
procedure gnutls_certificate_free_cas(sc:Tgnutls_certificate_credentials_t);cdecl;external;
procedure gnutls_certificate_free_ca_names(sc:Tgnutls_certificate_credentials_t);cdecl;external;
procedure gnutls_certificate_free_crls(sc:Tgnutls_certificate_credentials_t);cdecl;external;
procedure gnutls_certificate_set_dh_params(res:Tgnutls_certificate_credentials_t; dh_params:Tgnutls_dh_params_t);cdecl;external;
function gnutls_certificate_set_known_dh_params(res:Tgnutls_certificate_credentials_t; sec_param:Tgnutls_sec_param_t):longint;cdecl;external;
procedure gnutls_certificate_set_verify_flags(res:Tgnutls_certificate_credentials_t; flags:dword);cdecl;external;
function gnutls_certificate_get_verify_flags(res:Tgnutls_certificate_credentials_t):dword;cdecl;external;
{*
 * gnutls_certificate_flags:
 * @GNUTLS_CERTIFICATE_SKIP_KEY_CERT_MATCH: Skip the key and certificate matching check.
 * @GNUTLS_CERTIFICATE_API_V2: If set the gnutls_certificate_set_*key* functions will return an index of the added key pair instead of zero.
 * @GNUTLS_CERTIFICATE_SKIP_OCSP_RESPONSE_CHECK: If set, the gnutls_certificate_set_ocsp_status_request_file
 *    function, will not check whether the response set matches any of the certificates.
 * @GNUTLS_CERTIFICATE_VERIFY_CRLS: This will enable CRL verification when added in the certificate structure.
 *    When used, it requires CAs to be added before CRLs.
 *
 * Enumeration of different certificate credentials flags.
  }
type
  Pgnutls_certificate_flags = ^Tgnutls_certificate_flags;
  Tgnutls_certificate_flags =  Longint;
  Const
    GNUTLS_CERTIFICATE_SKIP_KEY_CERT_MATCH = 1;
    GNUTLS_CERTIFICATE_API_V2 = 1 shl 1;
    GNUTLS_CERTIFICATE_SKIP_OCSP_RESPONSE_CHECK = 1 shl 2;
    GNUTLS_CERTIFICATE_VERIFY_CRLS = 1 shl 3;
;

procedure gnutls_certificate_set_flags(para1:Tgnutls_certificate_credentials_t; flags:dword);cdecl;external;
procedure gnutls_certificate_set_verify_limits(res:Tgnutls_certificate_credentials_t; max_bits:dword; max_depth:dword);cdecl;external;
function gnutls_certificate_set_x509_system_trust(cred:Tgnutls_certificate_credentials_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_x509_trust_file(cred:Tgnutls_certificate_credentials_t; cafile:Pchar; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_x509_trust_dir(cred:Tgnutls_certificate_credentials_t; ca_dir:Pchar; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_x509_trust_mem(res:Tgnutls_certificate_credentials_t; ca:Pgnutls_datum_t; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_x509_crl_file(res:Tgnutls_certificate_credentials_t; crlfile:Pchar; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_x509_crl_mem(res:Tgnutls_certificate_credentials_t; CRL:Pgnutls_datum_t; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_certificate_set_x509_key_file(res:Tgnutls_certificate_credentials_t; certfile:Pchar; keyfile:Pchar; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_certificate_set_x509_key_file2(res:Tgnutls_certificate_credentials_t; certfile:Pchar; keyfile:Pchar; _type:Tgnutls_x509_crt_fmt_t; pass:Pchar; 
           flags:dword):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_certificate_set_x509_key_mem(res:Tgnutls_certificate_credentials_t; cert:Pgnutls_datum_t; key:Pgnutls_datum_t; _type:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_certificate_set_x509_key_mem2(res:Tgnutls_certificate_credentials_t; cert:Pgnutls_datum_t; key:Pgnutls_datum_t; _type:Tgnutls_x509_crt_fmt_t; pass:Pchar; 
           flags:dword):longint;cdecl;external;
procedure gnutls_certificate_send_x509_rdn_sequence(session:Tgnutls_session_t; status:longint);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_certificate_set_x509_simple_pkcs12_file(res:Tgnutls_certificate_credentials_t; pkcs12file:Pchar; _type:Tgnutls_x509_crt_fmt_t; password:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_certificate_set_x509_simple_pkcs12_mem(res:Tgnutls_certificate_credentials_t; p12blob:Pgnutls_datum_t; _type:Tgnutls_x509_crt_fmt_t; password:Pchar):longint;cdecl;external;
{ New functions to allow setting already parsed X.509 stuff.
  }
function gnutls_certificate_set_x509_key(res:Tgnutls_certificate_credentials_t; cert_list:Pgnutls_x509_crt_t; cert_list_size:longint; key:Tgnutls_x509_privkey_t):longint;cdecl;external;
function gnutls_certificate_set_x509_trust(res:Tgnutls_certificate_credentials_t; ca_list:Pgnutls_x509_crt_t; ca_list_size:longint):longint;cdecl;external;
function gnutls_certificate_set_x509_crl(res:Tgnutls_certificate_credentials_t; crl_list:Pgnutls_x509_crl_t; crl_list_size:longint):longint;cdecl;external;
function gnutls_certificate_get_x509_key(res:Tgnutls_certificate_credentials_t; index:dword; key:Pgnutls_x509_privkey_t):longint;cdecl;external;
function gnutls_certificate_get_x509_crt(res:Tgnutls_certificate_credentials_t; index:dword; crt_list:PPgnutls_x509_crt_t; crt_list_size:Pdword):longint;cdecl;external;
{ OCSP status request extension, RFC 6066  }
type

  Tgnutls_status_request_ocsp_func = function (session:Tgnutls_session_t; ptr:pointer; ocsp_response:Pgnutls_datum_t):longint;cdecl;

procedure gnutls_certificate_set_ocsp_status_request_function(res:Tgnutls_certificate_credentials_t; ocsp_func:Tgnutls_status_request_ocsp_func; ptr:pointer);cdecl;external;
function gnutls_certificate_set_ocsp_status_request_function2(res:Tgnutls_certificate_credentials_t; idx:dword; ocsp_func:Tgnutls_status_request_ocsp_func; ptr:pointer):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_ocsp_status_request_file(res:Tgnutls_certificate_credentials_t; response_file:Pchar; idx:dword):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_ocsp_status_request_file2(res:Tgnutls_certificate_credentials_t; response_file:Pchar; idx:dword; fmt:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_certificate_set_ocsp_status_request_mem(res:Tgnutls_certificate_credentials_t; resp:Pgnutls_datum_t; idx:dword; fmt:Tgnutls_x509_crt_fmt_t):longint;cdecl;external;
{ must be zero  }
type
  Pgnutls_ocsp_data_st = ^Tgnutls_ocsp_data_st;
  Tgnutls_ocsp_data_st = record
      version : dword;
      response : Tgnutls_datum_t;
      exptime : Ttime_t;
      padding : array[0..31] of byte;
    end;

function gnutls_certificate_get_ocsp_expiration(sc:Tgnutls_certificate_credentials_t; idx:dword; oidx:longint; flags:dword):Ttime_t;cdecl;external;
function gnutls_ocsp_status_request_enable_client(session:Tgnutls_session_t; responder_id:Pgnutls_datum_t; responder_id_size:Tsize_t; request_extensions:Pgnutls_datum_t):longint;cdecl;external;
function gnutls_ocsp_status_request_get(session:Tgnutls_session_t; response:Pgnutls_datum_t):longint;cdecl;external;
const
  GNUTLS_OCSP_SR_IS_AVAIL = 1;  
